# RoboticsSoftwareProjects

./: .gitignore  README.md
Camera Calibration/: functions.py  main.py
Localization/: README.md
Localization/EKF/: 1Dkalmanfilter.cpp  2Dkalmanfilter.cpp  CMakeLists.txt  gaussian.cpp  measurement_update.cpp  state_prediction.cpp
Localization/MCL/: .CMakeLists.txt  CMakeLists.txt  MCL  error_eval.cpp  main.cpp  resampling.cpp  resampling_wheel.cpp
Localization/MCL/include/: mcl.cpp  mcl.h
ROS Basic/actionlib_basic/: CMakeLists.txt  README.md  package.xml
ROS Basic/actionlib_basic/scripts/: actionlib_client_py.py  actionlib_server_py.py
ROS Basic/actionlib_basic/src/: action_client.cpp  action_server.cpp
ROS Basic/srv_n_clt/: CMakeLists.txt  README.md  package.xml
ROS Basic/srv_n_clt/scripts/: client_py.py  server_py.py
ROS Basic/srv_n_clt/src/: client.cpp  server.cpp
ROS Basic/sub_n_pub/: CMakeLists.txt  README.md  package.xml
ROS Basic/sub_n_pub/launch/: talker.launch
ROS Basic/sub_n_pub/scripts/: listener_py.py  talker_py.py
ROS Basic/sub_n_pub/src/: listener.cpp  talker.cpp
SearchandReturn/: PerspectiveTransformation.py  Thresholding.py
